fixed incorrectly applied spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,7 +10,7 @@
     position: relative;
 
     @include media-query($on-palm) {
-        padding: $spacing-unit / 2;
+        padding: 0 $spacing-unit / 2;
     }
 
     @media print {
